<resources>
    <string name="app_name">Hemmah</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="signIn_Button">Log in</string>
    <string name="orSignUp_TV">Sign up</string>
    <string name="dontHaveAccout">Don\'t have account?</string>
    <string name="logIn_TV">Log In</string>
    <string name="createACCOUNT_TV">Create Account</string>
    <string name="firstName_ET">First Name</string>
    <string name="lastName_ET">Last Name</string>
    <string name="userName_ET">User Name</string>
    <string name="email_ET">Email</string>
    <string name="password_ET">Password</string>
    <string name="createAccount_BT">Create Volunteer</string>
    <string name="video_item1_nav">Home</string>
    <string name="video_item2_nav">Settings</string>
    <string name="callforhelp_frag_bt">Call For Help</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="notification_button_name">Accept</string>
    <string name="request_help_bt">Request</string>
    <string name="disabled_helpfrag_header">Write what you need</string>
    <string name="toggle_date_dishelpfrag">Choose date</string>
    <string name="helppost_bt">Ok</string>
    <string name="create_disabled_bt">Create Disabled</string>
    <string name="post_a_help_request_TV">Post A Help Request</string>
    <string name="help_notification_text">needs your help</string>
    <string name="help_notification_title">Help Request !</string>
    <string name="helprequest_title_ET">title</string>
    <string name="helprequest_description_ET">description</string>
    <string name="volunteer_navbar_post">home</string>
    <string name="volunteer_navbar_history">history</string>
    <string name="volunteer_navbar_settings">settings</string>
    <string name="post_title_TV">Title</string>
    <string name="post_description_TV">description</string>
    <string name="post_choosedate_TV">Choose date</string>
    <string-array name="planets_array">
        <item>vol</item>
        <item>dis</item>
    </string-array>

    <!--  toast messages  -->
    <string name="signup_toastmessage">You Have Successfully Signed Up</string>
    <string name="signin_toastmessage">You Have Successfully Logged In</string>
    <string name="failedtoconnect_toastmessage">Failed to connect</string>
    <!--    validation errors-->
    <string name="firstname_em_error">Please enter a firstname</string>
    <string name="lastname_em_error">Please enter a lastname</string>
    <string name="username_em_error">Please enter a username</string>
    <string name="email_em_error">Please enter an email</string>
    <string name="password_em_error">Please enter a password</string>
    <string name="phonenumber_em_error">Please enter a phonenumber</string>
    <string name="password_htext">
        Password must contain at least 8 characters,
        \nincluding UPPER/lower case,
        \na number
        \nand a special character</string>
    <string name="email_ht">Email must be example@hostexample.com</string>
    <string name="username_ht">at least 8 characters</string>
    <string name="volunteer_welcome_tv">Welcome, </string>
    <string name="status_offline_SWITCH">Offline</string>
    <string name="status_online_SWITCH">Online</string>
    <string name="volunteer_helps_counter">Number of helps\nyou have made</string>
    <string name="current_status">Current status</string>
    <string name="logout_prefrence_item">Logout</string>
    <string name="describtion_language_prefrence">the volunteer\'s language is based on it</string>
    <string name="prefrence_temporary_lang_describtion">Choose your preferred language</string>
    <string name="requests_bottomnav_item">Requests</string>
    <string name="disabled_requests_options_menu_item_delete">Delete</string>
    <string name="disabled_requests_OMI_edit">Edit</string>
    <string name="disabled_helprequest_mark_as_complete">Mark as complete</string>
    <string name="please_wait">Please Wait ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>