<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/help_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/disabled_helpfrag_header"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/help_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/helprequest_title_ET"
        app:boxBackgroundColor="@color/transparent"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/help_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/helprequest_description_ET"
        app:boxBackgroundColor="@color/transparent"
        app:counterEnabled="true"
        app:counterMaxLength="180"
        app:counterOverflowTextAppearance="@color/colorError">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/help_choose_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/toggle_date_dishelpfrag"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/help_button_add_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@drawable/button_background_color"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/request_help_bt"
        android:textAllCaps="false"
        android:textColor="@color/colorOnAccent" />

</LinearLayout>

