<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <TextView
        android:id="@+id/login_header_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logIn_TV"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06999999" />




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="94dp"
            app:boxBackgroundColor="@color/transparent"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:startIconDrawable="@drawable/emailicon">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_ET" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/transparent"
            app:boxBackgroundMode="outline"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/passwordicon">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_ET"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/orSignUp_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="20dp"
            android:text="@string/orSignUp_TV"
            android:textColor="#5658DD"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_pass"
            tools:layout_editor_absoluteX="25dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background_color"
            android:text="@string/signIn_Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>