<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:id="@+id/volunteerGradient_Layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include layout="@layout/common_home" />
        </FrameLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/volunteer_CV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#F5F5F8"
            app:cardCornerRadius="20dp"
            app:cardElevation="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/belowCard_GL"
            app:layout_constraintEnd_toEndOf="@id/volunteerHome_right_GL"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@id/volunteerHome_left_GL"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/volunteerCardView_Container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/numberOfHelps_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/volunteer_helps_counter"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/helps_counter_TV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="0"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/numberOfHelps_TV"
                    app:layout_constraintStart_toStartOf="@+id/numberOfHelps_TV"
                    app:layout_constraintTop_toBottomOf="@+id/numberOfHelps_TV" />

                <TextView
                    android:id="@+id/currentState_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/current_status"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/numberOfHelps_TV"
                    app:layout_constraintStart_toStartOf="@+id/numberOfHelps_TV"
                    app:layout_constraintTop_toBottomOf="@+id/helps_counter_TV" />


                <TextView
                    android:id="@+id/status_switchable_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_offline_SWITCH"
                    android:textColor="@color/colorError"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/switchMaterial"
                    app:layout_constraintEnd_toStartOf="@+id/switchMaterial"
                    app:layout_constraintStart_toStartOf="@+id/currentState_TV"
                    app:layout_constraintTop_toTopOf="@+id/switchMaterial" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchMaterial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@+id/currentState_TV"
                    app:layout_constraintStart_toEndOf="@+id/middleOfCard_GL"
                    app:layout_constraintTop_toBottomOf="@+id/currentState_TV" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/middleOfCard_GL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/volunteerHome_left_GL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/volunteerHome_right_GL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/volunteerHome_right_GL"
            app:layout_constraintStart_toStartOf="@+id/volunteerHome_left_GL"
            app:layout_constraintTop_toBottomOf="@+id/volunteer_CV">

            <ImageView
                android:id="@+id/empty_history_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="30dp"
                android:src="@drawable/empty_requests" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="No Requests Found Yet"
                android:textColor="@color/colorPrimaryLight1"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center"
                android:text="There is no help requests posted yet \n thanks for your effort"
                android:textSize="13sp" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView_GL"
            app:layout_constraintVertical_bias="1.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/post_RV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:backgroundTint="@color/colorPrimaryLight1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/posts_recycler_item" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/belowCard_GL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.44" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/recyclerView_GL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.47" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/notification_all_FragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:background="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/expandedRequest_fragment_CONTAINER"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <FrameLayout
        android:id="@+id/profilePhoto_CONTAINER"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>